--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,14 @@ version: "3"
 
 services:
   keycloak:
-    image: quay.io/keycloak/keycloak:latest
+    image: quay.io/keycloak/keycloak:25.0.1
     ports:
       - "8080:8080"
     volumes:
       - keycloak-data:/opt/keycloak/data
     environment:
       KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: passwd
+      KEYCLOAK_ADMIN_PASSWORD: admin
     command:
       - start-dev
   
